Diseño Pagina web

--- a/Mi_Web.html
+++ b/Mi_Web.html
@@ -197,6 +197,10 @@
     <p id="respuesta"></p>
   </section>
 
+  <div style="text-align: center; margin-top: 1rem;">
+  <button id="toggle-dark-mode" class="modo-boton">🌙 Modo Oscuro</button>
+</div>
+
   <footer>
     <p>&copy; 2025 Diseño Acústico Pro. Todos los derechos reservados.</p>
   </footer>
